migrate to java 25 and spring boot 4